Stop periodic charges cascading into later months, and the import fixes behind it
The matcher only scored occurrences that still had money left, so a spent
occurrence was invisible and the charge scored against a later month.  A
merchant match alone scores 100 and the auto-assign test is an OR, so the date
never got a vote:  Deeper.com's April charge walked forward to August a month at
a time, and the Citi card's ADT charges did the same thing in September.

An early charge is now this occurrence's only when it is early by an amount that
is normal for the item, and the sequential fallback resolves the charge's own
period even when that occurrence is exhausted, exactly as the collection case
already did.  Charges further out than that are asked about rather than assigned
silently.

Also in this batch, from the 09-15 and 09-16 import runs:

- Provisional import ids are claimed against the register, so a collision no
  longer upserts over an unrelated transaction.  Both damaged paychecks were
  repaired in the database.
- The duplicate check matches on date and amount.  The payee is not compared,
  because the same charge is renamed between downloads;  the held row's payee is
  shown when the two differ.
- Transactions are always reconciled, and the other side of a transfer is found
  in another register by exact date and amount.
- Semester budget items:  a SEMESTERS period whose schedule is packed into the
  period text, for bills that fall only in the school year.
- A budget with a single forecast asks one question instead of three.
- End dates and forecast windows compare date to date, so an item is still
  active on its end date and its last occurrence is no longer dropped.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01WkcXfEsq2zjfAm8ECNHm17